# spline_interpolation

./: CMakeLists.txt  LICENSE  README.md  setup.py
include/spline_interpolation/: b_spline.h
src/: b_spline.cpp  b_spline_py.cpp  test.cpp  test.py
